--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,6 @@
-@import './reset.scss';
+@import url(https://fonts.googleapis.com/css?family=Mr+Dafoe);
+@import url(https://fonts.googleapis.com/css?family=Titillium+Web:900);
 
-#penguin {
-  border-radius: 50%;
-}
+@import './reset.scss';
+@import './main.scss';
+@import './animals.scss';
